# LSD-OpenCV-MATLAB

./: CMakeLists.txt  README.md  index.html  params.json
include/: lsd.h
matlab/: CMakeLists.txt  lsd.cpp  lsd_image.cpp
matlab/x64/: lsd.mexw64  lsd2.m  lsd2_example.m  lsd_example.m  lsd_image.mexw64
matlab/x86/: lsd2_example.m  lsd_example.m
opencv/: CMakeLists.txt  lsd_opencv_example.cpp
pylsd/: LICENSE  README.md  setup.py
pylsd/example/: example_PIL.py  example_cv2.py
pylsd/pylsd/: __init__.py  lsd.py
pylsd/pylsd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pylsd/pylsd/bindings/: __init__.py  lsd_ctypes.py
pylsd/pylsd/lib/darwin/: liblsd.dylib
pylsd/source/: CMakeLists.txt
pylsd/source/include/: lsd.h
pylsd/source/src/: lsd.cpp
src/: lsd.cpp
